fixed image tags

--- a/hw3/index.html
+++ b/hw3/index.html
@@ -474,61 +474,61 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum1.png" width="400px" />
+							<img src="BunnyAccum-1.png" width="400px" />
 							<figcaption>Bunny of 1 bounce light, accumulating; 64,1,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum1.png" width="400px" />
+							<img src="BunnyNoAccum-1.png" width="400px" />
 							<figcaption>Bunny of 1 bounce light, mth; 64,1,1.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum2.png" width="400px" />
+							<img src="BunnyAccum-2.png" width="400px" />
 							<figcaption>Bunny of 2 bounce lights, accumulating; 64,2,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum2.png" width="400px" />
+							<img src="BunnyNoAccum-2.png" width="400px" />
 							<figcaption>Bunny of 2 bounce lights, mth; 64,2,1.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum3.png" width="400px" />
+							<img src="BunnyAccum-3.png" width="400px" />
 							<figcaption>Bunny of 3 bounce lights, accumulating; 64,3,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum3.png" width="400px" />
+							<img src="BunnyNoAccum-3.png" width="400px" />
 							<figcaption>Bunny of 3 bounce lights, mth; 64,3,1.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum4.png" width="400px" />
+							<img src="BunnyAccum-4.png" width="400px" />
 							<figcaption>Bunny of 4 bounce lights, accumulating; 64,4,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum4.png" width="400px" />
+							<img src="BunnyNoAccum-4.png" width="400px" />
 							<figcaption>Bunny of 4 bounce lights, mth; 64,4,1.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum5.png" width="400px" />
+							<img src="BunnyAccum-5.png" width="400px" />
 							<figcaption>Bunny of 5 bounce lights, accumulating; 64,5,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum5.png" width="400px" />
+							<img src="BunnyNoAccum-5.png" width="400px" />
 							<figcaption>Bunny of 5 bounce lights, mth; 64,5,1.</figcaption>
 						</td>
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyAccum100.png" width="400px" />
+							<img src="BunnyAccum-100.png" width="400px" />
 							<figcaption>Bunny of 100 bounce lights, accumulating; 64,100,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum100.png" width="400px" />
+							<img src="BunnyNoAccum-100.png" width="400px" />
 							<figcaption>Bunny of 100 bounce lights, mth; 64,100,1.</figcaption>
 						</td>
 					</tr>
@@ -555,7 +555,7 @@
 					</tr>
 					<tr>
 						<td style="text-align: center;">
-							<img src="B5.4 CBbunny.pngB5.2 CBbunny.png" width="400px" />
+							<img src="B5.4 CBbunny.png" width="400px" />
 							<figcaption>Bunny of 2 bounce light, accumulating; 1024,2,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
