--- a/hw3/index.html
+++ b/hw3/index.html
@@ -545,7 +545,7 @@
 				<table style="width: 100%; text-align: center; border-collapse: collapse;">
 					<tr>
 						<td style="text-align: center;">
-							<img src="BunnyNoAccum-0" width="400px" />
+							<img src="BunnyNoAccum-0.png" width="400px" />
 							<figcaption>Bunny of 0 bounce light, accumulating; 1024,0,1.</figcaption>
 						</td>
 						<td style="text-align: center;">
