--- a/hw4/index.html
+++ b/hw4/index.html
@@ -28,7 +28,7 @@
 	<body>
 		<div class="container">
 		<h1>CS184/284A Spring 2025 Homework 4 Write-Up</h1>
-		<div style="text-align: center;">Names: </div>
+		<div style="text-align: center;">Names: Karson Du, Patrick Sanchez </div>
 
 		<br>
 
@@ -58,22 +58,22 @@
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="clothsim.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="scene_pinned2.png" width="400px"/>
+				  <figcaption>Pinned2 Scene</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="clothsim.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="NoShear.png" width="400px"/>
+				  <figcaption>Without any Shearing Constraints</figcaption>
 				</td>
 			  </tr>
 			  <tr>
 				<td style="text-align: center;">
-				  <img src="clothsim.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="OnlyShear.png" width="400px"/>
+				  <figcaption>With only Shearing Constraint</figcaption>
 				</td>
 				<td style="text-align: center;">
-				  <img src="clothsim.png" width="400px"/>
-				  <figcaption>Caption goes here.</figcaption>
+				  <img src="AllConstraints.png" width="400px"/>
+				  <figcaption>With all Constraints</figcaption>
 				</td>
 			  </tr>
 			</table>
