--- a/hw4/index.html
+++ b/hw4/index.html
@@ -98,6 +98,12 @@
 						<figcaption>KS of 50000</figcaption>
 					</td>
 				</tr>
+				<tr>
+					<td style="text-align: center;">
+						<img src="Part3Plane" width="400px" />
+						<figcaption>Cloth lying peacefully at rest on the plane.</figcaption>
+					</td>
+				</tr>
 			</table>
 		</div>
 		<h2>Part 4: Handling self-collisions</h2>
