fixed part3plane picture

--- a/hw4/index.html
+++ b/hw4/index.html
@@ -100,7 +100,7 @@
 				</tr>
 				<tr>
 					<td style="text-align: center;">
-						<img src="Part3Plane" width="400px" />
+						<img src="Part3Plane.png" width="400px" />
 						<figcaption>Cloth lying peacefully at rest on the plane.</figcaption>
 					</td>
 				</tr>
