--- a/hw4/index.html
+++ b/hw4/index.html
@@ -99,10 +99,10 @@
 					</td>
 				</tr>
 				<tr>
-					<td style="text-align: center;">
-						<img src="Part3Plane.png" width="400px" />
-						<figcaption>Cloth lying peacefully at rest on the plane.</figcaption>
-					</td>
+					<figure>
+						<img src="Part3Plane.png" alt="Plane" style="width:70%" />
+						<figcaption>Cloth lying peacefully at rest on the plane</figcaption>
+					</figure>
 				</tr>
 			</table>
 		</div>
